# bogen-bot-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
python/: main.py
src/: db.rs  get_ability_value.rs  main.rs
