[package]
name = "bogen-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
google-sheets4 = "4.0.1"
once_cell = "1.17.1"
serenity = "0.11.5"
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
