[package]
name = "bogen-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
dotenv = "0.15.0"
google-sheets4 = "4.0.1"
once_cell = "1.17.1"
poise = "0.6.1"
pyo3 = "0.23.3"
rand = "0.8.5"
serde_json = "1.0.94"
sqlite = "0.30.4"
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
tower-service = "0.3.2"
